tests/error/unnamed_int_declaration_in_structure.c
// fail "Declaration does not declare anything."

struct contains_unnamed_int { int; };

int main(){}


